--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://35.200.129.153:3306/rif?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=rifadmin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
