--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#==== message ====#
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
+
 #==== connect to mysql ======#
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
