--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,5 @@ dependencies {
 	compile ('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+	compile 'com.google.guava:guava:21.0'
 }
