--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.messages.encoding=UTF-8
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/rif?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #spring.datasource.url = jdbc:postgresql://ec2-54-235-109-37.compute-1.amazonaws.com:5432/dbvobv3pftfmg6?useSSL=true
 #spring.datasource.username = aikuaptzolqcbj
@@ -34,3 +34,14 @@ log4j.logger.org.thymeleaf.TemplateEngine.cache.TEMPLATE_CACHE=DEBUG
 log4j.logger.org.thymeleaf.TemplateEngine.cache.FRAGMENT_CACHE=DEBUG
 log4j.logger.org.thymeleaf.TemplateEngine.cache.MESSAGE_CACHE=DEBUG
 log4j.logger.org.thymeleaf.TemplateEngine.cache.EXPRESSION_CACHE=DEBUG
+
+###########  sql server ###########
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=rif;integratedSecurity=false;
+spring.datasource.username=sa
+spring.datasource.password=P@ssw0rd
+
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=springbootdb
+#spring.datasource.username=sa
+#spring.datasource.password=Projects@123
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
