fix path redirect
fix url pameter ???

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
 
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+
 
 #==== connect to mysql ======#
 # Hibernate ddl auto (create, create-drop, update)
@@ -37,7 +40,7 @@ log4j.logger.org.thymeleaf.TemplateEngine.cache.MESSAGE_CACHE=DEBUG
 log4j.logger.org.thymeleaf.TemplateEngine.cache.EXPRESSION_CACHE=DEBUG
 
 ###########  sql server ###########
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=rif;integratedSecurity=false;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=RIF;integratedSecurity=false;
 spring.datasource.username=sa
 spring.datasource.password=P@ssw0rd
 
