--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,4 +46,6 @@ spring.datasource.password=P@ssw0rd
 #spring.datasource.username=sa
 #spring.datasource.password=Projects@123
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver 
+
+server.port = 8181
