change view and pass admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
 
+server.port=8181
 
 #==== connect to mysql ======#
 # Hibernate ddl auto (create, create-drop, update)
